fix base label width behaviour

--- a/src/main/resources/css/flat_white.css
+++ b/src/main/resources/css/flat_white.css
@@ -194,6 +194,7 @@
     -fx-font-size: 18;
     -fx-text-fill: #5F5F5F;
     -fx-highlight-fill: #F8644C;
+    -fx-text-overrun: ellipsis;
 }
 
 /*////////////////////////////////////////////////////////////////////////////*/
