--- a/src/main/resources/css/flat_dark.css
+++ b/src/main/resources/css/flat_dark.css
@@ -64,7 +64,7 @@
     -fx-font-weight: bold;
 }
 
-.vpl {
+.bts{ 
     -fx-background-color: #efefef;
 }
 
@@ -128,12 +128,12 @@
     -fx-padding: 0.167em;
 }
 
-.vpl-element {
+.bts-element {
     -fx-background-color: transparent;
     -fx-background-insets: 5 5 5 5;
 }
 
-.vpl-button{
+.bts-button{
     -fx-padding: 0;
     -fx-background-color: transparent;
     -fx-border-insets: 0;
@@ -143,11 +143,11 @@
     -fx-text-fill: white;
 }
 
-.vpl-button:hover{
+.bts-button:hover{
     -fx-text-fill: salmon;
 }
 
-.vpl-tag{
+.bts-tag{
     -fx-padding: 0;
     -fx-alignment: center-left;
     -fx-background-color: transparent;
